--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,11 @@
 ---
+# DEBIAN
+mysql_version: 8.0
+mysql_version_minor: 22
+mysql_arch: amd64
+mysql_package_name: libmysqlclient21_{{ mysql_version }}.{{ mysql_version_minor }}-1{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}_{{ mysql_arch }}.deb
+mysql_debian_url: 'https://dev.mysql.com/get/Downloads/MySQL-{{ mysql_version }}/{{ mysql_package_name }}'
+
 # defaults file for mysql
 mysql_root_password: changemeplease
      
