--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,30 +1,30 @@
 ---
 
-- name: Install mysql for Debian
-  get_url:
-    url: "{{ mysql_debian_url }}"
-    dest: "/tmp/{{ mysql_package_name }}"
-  changed_when: false
-  when: ansible_os_family == "Debian"
+# - name: Install mysql for Debian
+#   get_url:
+#     url: "{{ mysql_debian_url }}"
+#     dest: "/tmp/{{ mysql_package_name }}"
+#   changed_when: false
+#   when: ansible_os_family == "Debian"
 
-- name: Install mysql-common
-  command: dpkg -i /tmp/{{ mysql_package_name }}
+# - name: Install mysql-common
+#   command: dpkg -i /tmp/{{ mysql_package_name }}
 
-- name: Install mysql-common
-  apt:
-    name: 
-      - mysql-server
-    state: present
-  changed_when: false
+# - name: Install mysql-common
+#   apt:
+#     name: 
+#       - mysql-server
+#     state: present
+#   changed_when: false
 
-- name: Install mysql for Debian
-  apt:
-    name: 
-      - mysql-common
-      - mysql-server
-    state: present
-  changed_when: false
-  when: ansible_os_family == "Debian"
+# - name: Install mysql for Debian
+#   apt:
+#     name: 
+#       - mysql-common
+#       - mysql-server
+#     state: present
+#   changed_when: false
+#   when: ansible_os_family == "Debian"
 
 - name: Install mysql for Centos dists
   block:
