--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,11 @@ jobs:
       matrix:
         distro:
           - centos7
-          - centos8
+          #- centos8
           # - debian10
           # - ubuntu2004
           # - ubuntu1804
-          - fedora32
+          #- fedora32
 
     steps:
       - name: Check out the codebase.
