--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -31,8 +31,7 @@
     - name: Insall mysql for Centos
       yum:
         name: 
-          - mysql
-          - mysql-server
+          - mysql_centos_url
           - MySQL-python
         state: present
       changed_when: false
@@ -49,15 +48,15 @@
       when: ansible_distribution_major_version == "8"
   when: ansible_distribution == "CentOS"
 
-- name: Insall mysql for Fedora dists
-  yum:
-    name: 
-      - mysql
-      - mysql-server
-      - MySQL-python3
-    state: present
-  when: ansible_distribution == "Fedora"
-  changed_when: false
+# - name: Insall mysql for Fedora dists
+#   yum:
+#     name: 
+#       - mysql
+#       - mysql-server
+#       - MySQL-python3
+#     state: present
+#   when: ansible_distribution == "Fedora"
+#   changed_when: false
 
 - name: Enable mysql
   systemd:
